--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="editmessage" translatable="false">I\'m an EditText</string>
    <string name="hinttext" translatable="false">Write something here</string>
     <string name="question" translatable="false">Do you drink coffee?</string>
+    <string name="spin_message">Spin flag</string>
+    <string name="button1">Button 1</string>
+    <string name="button2">Button 2</string>
+    <string name="button3">Button 3</string>
+
 </resources>
