--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,13 @@
     <string name="editmessage" translatable="false">I\'m an EditText</string>
     <string name="hinttext" translatable="false">Write something here</string>
     <string name="question" translatable="false">Do you drink coffee?</string>
-    <string name="spin_message">Spin flag</string>
-    <string name="button1">Button 1</string>
-    <string name="button2">Button 2</string>
-    <string name="button3">Button 3</string>
+    <string name="spin_message" translatable="false">Spin flag</string>
+    <string name="emailLabel" translatable="false">Enter your Email address</string>
+    <string name="emailHint" translatable="false">Type email here</string>
+    <string name="passwordLabel" translatable="false">Type your password</string>
+    <string name="passwordHint" translatable="false">Type your password</string>
+    <string name="login" translatable="false">Login</string>
+    <string name="button_text" translatable="false">butto text</string>
+
 
 </resources>
